--- a/waybar/config
+++ b/waybar/config
@@ -4,11 +4,11 @@
     "height": 25, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
+    "modules-left": ["wlr/workspaces", "wlr/mode", "custom/media"],
+    "modules-center": ["wlr/window"],
     "modules-right": ["pulseaudio", "network", "disk", "cpu", "clock", "tray"],
     // Modules configuration
-    // "sway/workspaces": {
+    // "wlr/workspaces": {
     //     "disable-scroll": true,
     //     "all-outputs": true,
     //     "format": "{name}: {icon}",
@@ -23,7 +23,7 @@
     //         "default": ""
     //     }
     // },
-    "sway/mode": {
+    "wlr/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
     //"disk": {
