--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -19,7 +19,7 @@ monitor=LVDS-1,disable
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
+exec-once = waybar & gammastep & ~/run_dwall.sh & transmission-daemon & udiskie
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -121,8 +121,8 @@ device:epic mouse V1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
-bind = $mainMod, C, killactive, 
+bind = $mainMod, Return, exec, kitty
+bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
@@ -131,10 +131,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod SHIFT, h, movefocus, l
-bind = $mainMod SHIFT, l, movefocus, r
-bind = $mainMod SHIFT, k, movefocus, u
-bind = $mainMod SHIFT, j, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -167,3 +167,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Pulse Audio controls
+# Increase/decrease/mute sound volume
+bind = $mainMod, F12, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = $mainMod, F11, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = $mainMod, F10, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# Media Player Controls
+bind = $mainMod, F8, exec, playerctl play-pause
+bind = $mainMod, F9, exec, playerctl next
+bind = $mainMod, F7, exec, playerctl previous
+
